--- a/src/NativeBOINC/res/layout/checkable_list_item_1.xml
+++ b/src/NativeBOINC/res/layout/checkable_list_item_1.xml
@@ -38,6 +38,5 @@
 		android:layout_weight="1"
 		android:layout_gravity="center_vertical"
 		android:layout_marginLeft="6dip"
-		android:textAppearance="?android:attr/textAppearanceLarge" 
-		android:text="text1" />
+		android:textAppearance="?android:attr/textAppearanceLarge" />
 </LinearLayout>
