--- a/src/NativeBOINC/res/layout/install_progress.xml
+++ b/src/NativeBOINC/res/layout/install_progress.xml
@@ -32,7 +32,7 @@
   		android:text="@string/noInstallOpsText" />
   	<ListView android:id="@+id/installProgressList"
   		android:layout_width="fill_parent"
-  		android:layout_height="wrap_content"
+  		android:layout_height="0dip"
   		android:layout_weight="1"
   		android:paddingTop="5dip"
     	android:paddingBottom="5dip" />
