--- a/src/NativeBOINC/res/layout/access_list.xml
+++ b/src/NativeBOINC/res/layout/access_list.xml
@@ -27,7 +27,7 @@
     <ListView
 		android:id="@android:id/list"
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="0dip"
 		android:layout_weight="1" />
     <LinearLayout
 		android:orientation="horizontal"
