--- a/src/NativeBOINC/res/layout/distrib_info.xml
+++ b/src/NativeBOINC/res/layout/distrib_info.xml
@@ -27,11 +27,11 @@
   	android:padding="10dip">
   	<ScrollView
   		android:layout_width="fill_parent"
-  		android:layout_height="wrap_content"
+  		android:layout_height="0dip"
   		android:layout_weight="1">
   		<LinearLayout android:orientation="vertical"
 		  	android:layout_width="fill_parent"
-		  	android:layout_height="fill_parent">
+		  	android:layout_height="wrap_content">
 		    <TextView
 		    	android:id="@+id/distribVersion"
 		    	android:layout_width="fill_parent"
