--- a/src/NativeBOINC/res/layout/host_list.xml
+++ b/src/NativeBOINC/res/layout/host_list.xml
@@ -26,7 +26,7 @@
 	<ListView
 		android:id="@android:id/list"
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="0dip"
 		android:layout_weight="1"
 		android:hapticFeedbackEnabled="true" />
 	<!-- For case of empty list the following layout will apply -->
