--- a/src/NativeBOINC/res/layout/install_step1.xml
+++ b/src/NativeBOINC/res/layout/install_step1.xml
@@ -26,12 +26,12 @@
 	android:padding="10dip">
 	<ScrollView
   		android:layout_width="fill_parent"
-  		android:layout_height="wrap_content"
+  		android:layout_height="0dip"
   		android:layout_weight="1">
   		<LinearLayout 
   			android:orientation="vertical"
 		  	android:layout_width="fill_parent"
-		  	android:layout_height="fill_parent">
+		  	android:layout_height="wrap_content">
 		  	<TextView
 				android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
