--- a/src/NativeBOINC/res/layout/project_list.xml
+++ b/src/NativeBOINC/res/layout/project_list.xml
@@ -35,7 +35,7 @@
   <ListView
 		android:id="@android:id/list"
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="0dip"
 		android:layout_weight="1"
 		android:visibility="gone" />
   <TextView
