--- a/src/NativeBOINC/res/layout/screen_lock.xml
+++ b/src/NativeBOINC/res/layout/screen_lock.xml
@@ -41,8 +41,7 @@
 			android:layout_height="fill_parent"
 			android:gravity="right|center_vertical"
 			android:textStyle="bold"
-			android:textColor="@color/screenLockBarText"
-			android:text="99%, 13:30:30" />
+			android:textColor="@color/screenLockBarText" />
 	</LinearLayout>
   	<ImageView
   		android:layout_width="fill_parent"
@@ -83,7 +82,6 @@
 			android:layout_alignParentTop="true"
 			android:layout_centerInParent="true"
 			android:lines="1"
-			android:text="99.999%"
 			android:textAppearance="?android:attr/textAppearanceSmallInverse" />
 	</RelativeLayout>
 	<TextView
