--- a/src/NativeBOINC/res/layout/tab_layout.xml
+++ b/src/NativeBOINC/res/layout/tab_layout.xml
@@ -26,15 +26,16 @@
     <View android:id="@+id/emptyContent"
         android:layout_width="fill_parent"
     	android:layout_height="fill_parent" />
-    <ListView android:id="@android:id/list"
+    <LinearLayout
         android:layout_width="fill_parent"
-    	android:layout_height="wrap_content"
-    	android:fastScrollEnabled="true"/>
-	<TextView android:id="@+id/filterText"
-        android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
-    	android:textAppearance="?android:attr/textAppearanceMedium"
-    	android:textStyle="bold"
-    	android:color="#ffffff"
-    	android:layout_gravity="right|top" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+	    <ListView android:id="@android:id/list"
+	        android:layout_width="fill_parent"
+	    	android:layout_height="wrap_content"/>
+	    <View
+	        android:layout_width="fill_parent"
+	        android:layout_height="1dip"
+	        android:background="?android:attr/listDivider"/>
+    </LinearLayout>
 </FrameLayout>
