--- a/src/NativeBOINC/res/layout/messages.xml
+++ b/src/NativeBOINC/res/layout/messages.xml
@@ -26,10 +26,19 @@
     <View android:id="@+id/emptyContent"
         android:layout_width="fill_parent"
     	android:layout_height="fill_parent" />
-    <ListView android:id="@android:id/list"
+    <LinearLayout
         android:layout_width="fill_parent"
-    	android:layout_height="wrap_content"
-    	android:fastScrollEnabled="true"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+	    <ListView android:id="@android:id/list"
+	        android:layout_width="fill_parent"
+	    	android:layout_height="wrap_content"
+	    	android:fastScrollEnabled="true"/>
+	    <View
+	        android:layout_width="fill_parent"
+	        android:layout_height="1dip"
+	        android:background="?android:attr/listDivider"/>
+    </LinearLayout>
 	<TextView android:id="@+id/filterText"
         android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
