--- a/src/NativeBOINC/res/layout-land/notices_list_item.xml
+++ b/src/NativeBOINC/res/layout-land/notices_list_item.xml
@@ -43,8 +43,8 @@
 		android:id="@+id/noticeTitle"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_below="@+id/noticeCreateTime"
-		android:layout_alignLeft="@+id/noticeCreateTime"
+		android:layout_toRightOf="@+id/noticeCreateTime"
+		android:layout_alignTop="@+id/noticeCreateTime"
 		android:layout_marginLeft="6dip"
 		android:layout_marginRight="6dip"
 		android:gravity="left"
@@ -57,7 +57,7 @@
 		android:id="@+id/noticeDescription"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_below="@+id/noticeTitle"
+		android:layout_below="@+id/noticeCreateTime"
 		android:layout_alignLeft="@+id/noticeCreateTime"
 		android:layout_marginTop="3dip"
 		android:layout_marginRight="6dip"
