--- a/src/NativeBOINC/res/layout/install_step1.xml
+++ b/src/NativeBOINC/res/layout/install_step1.xml
@@ -66,7 +66,7 @@
 			  		android:layout_alignParentRight="true"
 			  		android:text="@string/info" />
 		  	</RelativeLayout>
-		  	<RelativeLayout android:id="@+id/installPlaceGroup"
+		  	<RelativeLayout
 		  	    android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
 		  		android:paddingBottom="10dip">
