--- a/src/NativeBOINC/res/layout/install_notification.xml
+++ b/src/NativeBOINC/res/layout/install_notification.xml
@@ -7,8 +7,8 @@
     android:padding="10dp">
     <TextView android:id="@+id/operationDesc"
     	android:textStyle="bold"
-    	android:textColor="@android:color/black"
     	android:layout_width="wrap_content"	
+    	android:textColor="@color/notificationText"
     	android:layout_height="wrap_content"
     	android:maxLines="1" />
    	<ProgressBar android:id="@+id/operationProgress"
