NativeBOINC: added new option in Local prefs (xfer when wifi). Added new option in Manage client screen: proxy settings.

--- a/src/NativeBOINC/res/layout/local_prefs.xml
+++ b/src/NativeBOINC/res/layout/local_prefs.xml
@@ -237,6 +237,11 @@
 				  	android:orientation="vertical"
 				  	android:layout_width="fill_parent"
 				  	android:layout_height="wrap_content">
+					<CheckBox
+			  			android:id="@+id/localPrefOnlyWhenWifi"
+			  			android:layout_width="fill_parent"
+			  			android:layout_height="wrap_content"
+			  			android:text="@string/localPrefXferOnlyWhenWifi" />
 		  		    <LinearLayout
 			  			android:orientation="horizontal"
 						android:layout_width="fill_parent"
