--- a/src/NativeBOINC/res/values-pl/arrays.xml
+++ b/src/NativeBOINC/res/values-pl/arrays.xml
@@ -100,6 +100,12 @@
 		<item>Aktywność sieciowa na podstawie preferencji</item>
 		<item>Aktywność sieciowa wstrzymana</item>
 	</string-array>
+	<!-- GPU modes for client (display) -->
+	<string-array name="clientModeGpu">
+		<item>Aktywność GPU zawsze</item>
+		<item>Aktywność GPU na podstawie preferencji</item>
+		<item>Aktywność GPU wstrzymana</item>
+	</string-array>
 	<!-- Modes for client (values) - both run and network -->
 	<string-array name="clientModeValues">
 		<item>1</item>
